--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Kai Hao <kevin830726@gmail.com>",
   "private": true,
   "engines": {
-    "node": "7.6.0"
+    "node": ">= 7.6.0",
+    "npm": ">= 4.1.2"
   },
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -67,6 +68,7 @@
     "koa-bodyparser": "^4.0.0",
     "koa-logger": "^2.0.1",
     "koa-router": "next",
+    "koa-static": "^3.0.0",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "opn": "^4.0.2",
@@ -87,10 +89,6 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
   },
   "browserlist": [
     "> 1%",
