--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">= 7.6.0",
     "npm": ">= 4.1.2"
   },
+  "port": 3000,
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
@@ -66,6 +67,7 @@
     "kcors": "^1.3.2",
     "koa": "^2.0.1",
     "koa-bodyparser": "^4.0.0",
+    "koa-convert": "^1.2.0",
     "koa-logger": "^2.0.1",
     "koa-router": "next",
     "koa-static": "^3.0.0",
