--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "port": 3000,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev:web": "node build/dev-server.js",
+    "dev:server": "npm start",
+    "dev": "npm-run-all --parallel dev:*",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
@@ -73,6 +75,7 @@
     "koa-static": "^3.0.0",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "npm-run-all": "^4.0.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
