--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "npm-run-all --parallel dev:*",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit",
+    "test": "jest --watch",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
     "start": "node server/app.js"
   },
@@ -30,10 +30,16 @@
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-istanbul": "^3.1.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.3.0",
+    "babel-preset-env": "^1.1.11",
     "babel-preset-latest": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^3.5.0",
@@ -41,14 +47,17 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.2",
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-config-vue": "^2.0.2",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-vue": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
@@ -58,6 +67,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
+    "jest": "^19.0.2",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -81,10 +91,12 @@
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss-cssnext": "^2.9.0",
+    "regenerator-runtime": "^0.10.3",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.13.2",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.0.0",
     "vue-style-loader": "^2.0.0",
@@ -99,5 +111,10 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "jest": {
+    "moduleNameMapper": {
+      "^@(.*)$": "<rootDir>/src$1"
+    }
+  }
 }
